--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -134,6 +134,7 @@ h3, h2 {
   border: 1px solid #ddd;
 }
 
+
 /* portfolio page */
 
 .work {
@@ -168,12 +169,38 @@ h3, h2 {
   border-bottom: 0;
 }
 
+/* images size */
+
 .auth-image {
   float: left;
   width: 200px;
   height: auto;
   margin-top: 10px;
   margin-right: 25px;
+}
+
+.li-logo{
+ float: left;
+ width: 150px;
+ height: 50px;
+ margin-top: 10px;
+ margin-right: 25px;
+}
+
+.credit-logo{
+ float: left;
+ width: 130px;
+ height: 100px;
+ margin-top: 10px;
+ margin-right: 25px;
+}
+
+.github-logo{
+ float: left;
+ width: 130px;
+ height: 100px;
+ margin-top: 10px;
+ margin-right: 25px;
 }
 
 /* contact page */
